# namso

./: .gitignore  BUGFIX_REPORT.md  BUILD.md  COMPARISON.md  DEBUG_REPORT.md  DEVELOPMENT.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SUCCESS_REPORT.md  debug.html  index.html  package-lock.json  package.json  tailwind.config.js  test_commands.html  vite.config.ts  使用指南.md
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: card_generator.rs  commands.rs  exporters.rs  fake_data.rs  main.rs  networks.rs  validator.rs
src/components/: AdvancedMode.tsx  BasicMode.tsx  ResultPanel.tsx  ToolsMode.tsx
src/lib/: store.ts  types.ts  utils.ts
