[package]
name = "namso-gen"
version = "2.0.0"
description = "信用卡测试号码生成器"
authors = ["NamsoGen Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
csv = "1.3"
quick-xml = "0.31"

[features]
default = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true


